[be] refact: 리팩터링